tests/baselines/reference/compoundAdditionAssignmentWithInvalidOperands.errors.txt
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(6,1): error TS2365: Operator '+=' cannot be applied to types '真假' and '无值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(7,1): error TS2365: Operator '+=' cannot be applied to types '真假' and '为真'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(8,1): error TS2365: Operator '+=' cannot be applied to types '真假' and '0'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(9,1): error TS2365: Operator '+=' cannot be applied to types '真假' and 'E.a'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(10,1): error TS2365: Operator '+=' cannot be applied to types '真假' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(11,1): error TS2365: Operator '+=' cannot be applied to types '真假' and '空值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(12,1): error TS2365: Operator '+=' cannot be applied to types '真假' and '未定'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(15,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '无值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(16,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '为真'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(17,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '0'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(18,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'E.a'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(19,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(20,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '空值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(21,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '未定'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(24,1): error TS2365: Operator '+=' cannot be applied to types '无值' and '无值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(25,1): error TS2365: Operator '+=' cannot be applied to types '无值' and '为真'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(26,1): error TS2365: Operator '+=' cannot be applied to types '无值' and '0'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(27,1): error TS2365: Operator '+=' cannot be applied to types '无值' and 'E.a'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(28,1): error TS2365: Operator '+=' cannot be applied to types '无值' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(29,1): error TS2365: Operator '+=' cannot be applied to types '无值' and '空值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(30,1): error TS2365: Operator '+=' cannot be applied to types '无值' and '未定'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(33,1): error TS2365: Operator '+=' cannot be applied to types '数字' and '无值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(34,1): error TS2365: Operator '+=' cannot be applied to types '数字' and '为真'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(35,1): error TS2365: Operator '+=' cannot be applied to types '数字' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(38,1): error TS2365: Operator '+=' cannot be applied to types 'E' and '无值'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(39,1): error TS2365: Operator '+=' cannot be applied to types 'E' and '为真'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts(40,1): error TS2365: Operator '+=' cannot be applied to types 'E' and '{}'.


==== tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.ts (27 errors) ====
    enum E { a, b }
    
    var a: void;
    
    var x1: boolean;
    x1 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and '无值'.
    x1 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and '为真'.
    x1 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and '0'.
    x1 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and 'E.a'.
    x1 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and '{}'.
    x1 += null;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and '空值'.
    x1 += undefined;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '真假' and '未定'.
    
    var x2: {};
    x2 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '无值'.
    x2 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '为真'.
    x2 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '0'.
    x2 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'E.a'.
    x2 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '{}'.
    x2 += null;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '空值'.
    x2 += undefined;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '未定'.
    
    var x3: void;
    x3 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and '无值'.
    x3 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and '为真'.
    x3 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and '0'.
    x3 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and 'E.a'.
    x3 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and '{}'.
    x3 += null;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and '空值'.
    x3 += undefined;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '无值' and '未定'.
    
    var x4: number;
    x4 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '数字' and '无值'.
    x4 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '数字' and '为真'.
    x4 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '数字' and '{}'.
    
    var x5: E;
    x5 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and '无值'.
    x5 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and '为真'.
    x5 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and '{}'.